zebra-state/src/service/finalized_state/disk_format/tests/snapshots/sprout_nullifiers_raw_data@empty.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 153
expression: cf_data

---
[]
