zebra-state/src/service/finalized_state/disk_format/tests/snapshots/sprout_nullifiers_raw_data@testnet-0.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 122
expression: cf_data

---
[]
