zebra-state/src/service/finalized_state/disk_format/tests/snapshots/sync_meta_by_height_raw_data@mainnet_0.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000000",
    v: "9c0600000100000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
  ),
]
