zebra-state/src/service/finalized_state/disk_format/tests/snapshots/sync_meta_by_height_raw_data@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000000",
    v: "9c0600000100000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff0100000000000000",
  ),
  KV(
    k: "000001",
    v: "520600000100000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff0300000000000000",
  ),
  KV(
    k: "000002",
    v: "520600000100000000000000000000000000000000000000ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff0500000000000000",
  ),
]
